// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorklogPage should display process reminder 1`] = `
<React.Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Mon CRA | 
    </title>
  </HelmetWrapper>
  <WithStyles(GridWrapper)
    container={true}
  >
    <Connect(Process) />
    <Connect(WithStyles(ReduxForm)) />
    <Connect(WithStyles(Calendar)) />
    <WithStyles(Button)
      className=""
      color="primary"
      onClick={[Function]}
      variant="fab"
    >
      <pure(Print) />
    </WithStyles(Button)>
  </WithStyles(GridWrapper)>
  <Connect(WithStyles(Printer)) />
</React.Fragment>
`;

exports[`WorklogPage should redirect if missing client info 1`] = `
<Redirect
  push={false}
  to="/client"
/>
`;

exports[`WorklogPage should render properly 1`] = `
<React.Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Mon CRA | 
    </title>
  </HelmetWrapper>
  <WithStyles(GridWrapper)
    container={true}
  >
    <Connect(WithStyles(ReduxForm)) />
    <Connect(WithStyles(Calendar)) />
    <WithStyles(Button)
      className=""
      color="primary"
      onClick={[Function]}
      variant="fab"
    >
      <pure(Print) />
    </WithStyles(Button)>
  </WithStyles(GridWrapper)>
  <Connect(WithStyles(Printer)) />
</React.Fragment>
`;
